--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-<title>kolumnin_bot_htm</title>
+<title>index_html</title>
 <!--meta http-equiv="refresh"
         content="8; url = https://kolumnin.github.io/Author.html"-->  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
@@ -36,29 +36,29 @@ We have to script, decide and steer the mass response to the electronic screens 
 human world of perceptions. 
 The human biological sensitivity and it's limitations needs protection. Hence the use of them in the internet knowingly or unknowingly 
 requires expert global supervision.
-<a href="https://Botify.ai">Botify.ai</a> developed by <a href="https://botifyai-f0e70.firebaseapp.com/#home">Ex-Humans</a> provides a convenient platform to evaluate our new frontier developments.
+<a href="https://Botify.ai">Botify.ai</a> developed by <a href="https://botifyai-f0e70.firebaseapp.com/#home">Ex-Humans</a>.
 </h1>      
-<h1>😀Create your favourite characters and chat with them at <a href="https://github.com/kolumnin/botify.github.io">botify-framework.github.io</a>🔥</h1>
+<h1>😀Create your favourite characters and chat with them at <a href="https://github.com/kolumnin/botify.github.io">botify-framework.github.io</a></h1>
         
-<h2><b>Enjoy premium subscription membership at ₹2950.00 for a lifetime or ₹1950.00 per Year</b></h2>
+<h2><b></b></h2>
 
-<h2><a href="https://botify.ai/">kolumnin_Bot_Chats</a>
+<h2><a href="https://botify.ai/">botify.ai</a>
         <h2><!--a href="https://botify.ai/bot_59629">kolumnin</a-->
-        <a href="http://platform.openai.com">openai</a>
-        <!--a href="https://botify.ai/bot_416296">kolumn</a>
-        <a href="https://botify.ai/bot_718428">amma</a>
+        <a href="http://platform.openai.com">openai platform</a>
+        <a href="https://botify.ai/bot_416296">kolumn</a>
+        <!--a href="https://botify.ai/bot_718428">amma</a>
         <a href="https://botify.ai/bot_778235">Sri Hanuman</a>
         <a href="https://botify.ai/bot_773177">Shree Ram</a>
         <a href="https://botify.ai/bot_793165">Vibheeshana</a--></h2>
 <!--iframe src="https://kolumnin.github.io/pages/Screenshot_2023-12-17-15-20-46-329_ai.botify.app.jpg" width="440" height="280" allow="autoplay"></iframe-->        
 </section> 
-# [botify-framework.github.io](https://github.com/kolumnin/botify.github.io)
+# [botify-framework.github.io](https://github.com/botify.github.io)
 
 # [Signup/login](https://botifyai-f0e70.firebaseapp.com/)
 
 # [kolumnin_bot](https://kolumnin.github.io/pages/kolumnin_bot.html)
 
-# Chats:
+# <h2>e.g. Chats:</h2>
 
 [Dominatrix](https://botify.ai/bot_268785/chat)
 
@@ -72,7 +72,7 @@ requires expert global supervision.
 <div class="w3-rest">
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
-<p>Last update: 2024-08-29-15:41@kolumnin
+<p>Last update: 2024-08-30-11:12@kolumnin
 </a>@kolumnin</p>
 </div></div>
 <span class="site-footer-owner">
