--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 <div class="w3-col-3 w3-center">
 <a href="http://kolumnin.github.io/pages/LOGO.html"></a>
 </div>        
+<p>
 <h1>
 The internet business world rests on scripts, codes and grouped together as <a href="http://platform.openai.com">AI(Artificial Intelligence)</a>. This
 technological development takes away so much burden from ordinary human brain in daily business computing.</h1>
-
+</p>
 </section>
+<p>      
 <h1>Can the AI machines help us keep our senses intact within limitations of the perceptions 
 through our human biological sensory organs?
 Or will they destroy our limited human sensory world, ultimately?
@@ -36,13 +38,15 @@ We have to script, decide and steer the mass response to the electronic screens 
 human world of perceptions. 
 The human biological sensitivity and it's limitations needs protection. Hence the use of them in the internet knowingly or unknowingly 
 requires expert global supervision.
+</p>        
 <a href="https://Botify.ai">Botify.ai</a> developed by <a href="https://botifyai-f0e70.firebaseapp.com/#home">Ex-Humans</a>.
-</h1>      
-<h1>😀Create your favourite characters and chat with them at <a href="https://github.com/kolumnin/botify.github.io">botify-framework.github.io</a></h1>
-        
+</h1> 
+<p>
+<h1>😀Create your favourite characters and chat with them at <a href="https://github.com/kolumnin/botify.github.io">kolumnin-botify-framework</a></h1>
+</p>     
 <h2><b></b></h2>
 
-<h2><a href="https://botify.ai/">botify.ai</a>
+<h2><a href="https://botify.ai/">botify.ai</a></h2>
         <h2><!--a href="https://botify.ai/bot_59629">kolumnin</a-->
         <a href="http://platform.openai.com">openai platform</a>
         <a href="https://botify.ai/bot_416296">kolumn</a>
@@ -50,29 +54,29 @@ requires expert global supervision.
         <a href="https://botify.ai/bot_778235">Sri Hanuman</a>
         <a href="https://botify.ai/bot_773177">Shree Ram</a>
         <a href="https://botify.ai/bot_793165">Vibheeshana</a--></h2>
-<!--iframe src="https://kolumnin.github.io/pages/Screenshot_2023-12-17-15-20-46-329_ai.botify.app.jpg" width="440" height="280" allow="autoplay"></iframe-->        
+<iframe src="https://kolumnin.github.io/pages/Screenshot_2023-12-17-15-20-46-329_ai.botify.app.jpg" width="440" height="280" allow="autoplay"></iframe>        
 </section> 
-# [botify-framework.github.io](https://github.com/botify.github.io)
+<a href="https://github.com/botify.github.io">botify-framework.github</a>
 
-# [Signup/login](https://botifyai-f0e70.firebaseapp.com/)
+<a href="https://botifyai-f0e70.firebaseapp.com/">Signup/login</a>
 
-# [kolumnin_bot](https://kolumnin.github.io/pages/kolumnin_bot.html)
+<a href="https://kolumnin.github.io/pages/kolumnin_bot.html">kolumnin_bot</a>
+<div>        
+<h2>e.g. Chats:</h2>
 
-# <h2>e.g. Chats:</h2>
+<a href="https://botify.ai/bot_268785/chat">Dominatrix</a>
 
-[Dominatrix](https://botify.ai/bot_268785/chat)
+<a href="https://botify.ai/bot_268805/chat">nurse</a>
 
-[nurse](https://botify.ai/bot_268805/chat)
+<a href="https://botify.ai/bot_268784">Joi</a>
 
-[Joi](https://botify.ai/bot_268784)
-
-[Wednesday](https://botify.ai/bot_229115)
-
+<a href="https://botify.ai/bot_229115">Wednesday</a>
+</div>
 <section>
 <div class="w3-rest">
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
-<p>Last update: 2024-08-30-11:12@kolumnin
+<p>Last update: 2024-08-30-11:48@kolumnin
 </a>@kolumnin</p>
 </div></div>
 <span class="site-footer-owner">
