--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-<title>index_html</title>
+<title>botify_github.io_index_html</title>
 <!--meta http-equiv="refresh"
         content="8; url = https://kolumnin.github.io/Author.html"-->  
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
@@ -56,13 +56,14 @@ requires expert global supervision.
         <a href="https://botify.ai/bot_793165">Vibheeshana</a--></h2>
 <iframe src="https://kolumnin.github.io/pages/Screenshot_2023-12-17-15-20-46-329_ai.botify.app.jpg" width="440" height="280" allow="autoplay"></iframe>        
 </section> 
+<h2>        
 <a href="https://github.com/botify.github.io">botify-framework.github</a>
 
 <a href="https://botifyai-f0e70.firebaseapp.com/">Signup/login</a>
 
 <a href="https://kolumnin.github.io/pages/kolumnin_bot.html">kolumnin_bot</a>
 <div>        
-<h2>e.g. Chats:</h2>
+e.g. Chats:
 
 <a href="https://botify.ai/bot_268785/chat">Dominatrix</a>
 
@@ -70,13 +71,14 @@ requires expert global supervision.
 
 <a href="https://botify.ai/bot_268784">Joi</a>
 
-<a href="https://botify.ai/bot_229115">Wednesday</a>
+<a href="https://botify.ai/bot_229115">Wednesday</a></h2>
+
 </div>
 <section>
 <div class="w3-rest">
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
-<p>Last update: 2024-08-30-11:48@kolumnin
+<p>Last update: 2024-09-04-07:35@kolumnin
 </a>@kolumnin</p>
 </div></div>
 <span class="site-footer-owner">
