--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ e.g. Chats:
 <div class="w3-rest">
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
-<p>Last update: 2024-09-04-07:35@kolumnin
+<p>Last update: 2024-09-04-07:36@kolumnin
 </a>@kolumnin</p>
 </div></div>
 <span class="site-footer-owner">
@@ -87,6 +87,7 @@ e.g. Chats:
 <div class="w3-col-3 w3-pale-green w3-center"><a href="https://kolumnin.GitHub.io"><b>KoluMnIN</b></a> is hosted by <a href="https://GitHub.com"><b>GitHub</b></a>
 </div>
 </span>
-</footer></section>
+</footer>
+</section>
 </body>
 </html>
