--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ requires expert global supervision.
         <a href="https://botify.ai/bot_778235">Sri Hanuman</a>
         <a href="https://botify.ai/bot_773177">Shree Ram</a>
         <a href="https://botify.ai/bot_793165">Vibheeshana</a--></h2>
-<iframe src="https://kolumnin.github.io/pages/Screenshot_2023-12-17-15-20-46-329_ai.botify.app.jpg" width="440" height="280" allow="autoplay"></iframe>        
+<iframe src="https://kolumnin.github.io/pages/Screenshot_2023-12-17-15-20-46-329_ai.botify.app.jpg" width="640" height="280" allow="autoplay"></iframe>        
 </section> 
-<h2>        
+<h1>        
 <a href="https://github.com/botify.github.io">botify-framework.github</a>
 
 <a href="https://botifyai-f0e70.firebaseapp.com/">Signup/login</a>
@@ -71,15 +71,14 @@ e.g. Chats:
 
 <a href="https://botify.ai/bot_268784">Joi</a>
 
-<a href="https://botify.ai/bot_229115">Wednesday</a></h2>
+<a href="https://botify.ai/bot_229115">Wednesday</a></h1>
 
 </div>
 <section>
 <div class="w3-rest">
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
-<p>Last update: 2024-09-04-07:36@kolumnin
-</a>@kolumnin</p>
+<p>Last update: 2024-09-04-07:46@kolumnin</p>
 </div></div>
 <span class="site-footer-owner">
 <div>©2023-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
