--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ requires expert global supervision.
 <iframe src="https://kolumnin.github.io/pages/Screenshot_2023-12-17-15-20-46-329_ai.botify.app.jpg" width="640" height="280" allow="autoplay"></iframe>        
 </section> 
 <h1>        
-<a href="botify-framework.github">botify-framework</a>
+<a href="https://github.com/botify-framework/botify-framework.github.io">botify-framework</a>
 
 <a href="https://botifyai-f0e70.firebaseapp.com/">Signup/login</a>
 
@@ -78,7 +78,7 @@ e.g. Chats:
 <div class="w3-rest">
 <hr>
 <footer Id="Logo" class="w3-col-3 w3-footer w3-left">
-<p>Last update: 2024-09-10-09:29@kolumnin</p>
+<p>Last update: 2024-09-10-09:43@kolumnin</p>
 </div></div>
 <span class="site-footer-owner">
 <div>©2023-<a href="http://KoluMnIN.github.io/Author.html">Dr.K.Muraleedharan</a> All rights reserved.</div>
